# mcc

./: .gitignore  .gitmodules  .travis.yml  AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE_MIT.md  README.md  aliases.js  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js  test_macro.rs
compile_test/: Cargo.toml
compile_test/src/: cmd.rs  lib.rs  parse_fail.rs  run_pass.rs  runner.rs
compile_test/tests/: main.rs
crates/mcc/: Cargo.toml  error-codes.yaml
crates/mcc-driver/: Cargo.toml
crates/mcc-driver/src/: callbacks.rs  cli.rs  lib.rs
crates/mcc-macros/: Cargo.toml
crates/mcc-macros/src/: lib.rs
crates/mcc-syntax/: Cargo.toml  build.rs
crates/mcc-syntax/src/: lib.rs  span.rs
crates/mcc/src/: assembling.rs  cmd.rs  codes.rs  compile.rs  compiling.rs  debug.rs  diagnostics.rs  files.rs  lib.rs  main.rs  parsing.rs  preprocessing.rs  ptr.rs  render.rs  text.rs  types.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: error_codes.rs  main.rs
integration-tests/: Cargo.toml  README.md
integration-tests/src/: lib.rs
integration-tests/tests/: integration.rs  writing_a_c_compiler.rs
mcc/: Cargo.toml  all.html  enum.CommandError.html  fn.assemble_and_link.html  fn.default_target.html  fn.parse.html  fn.preprocess.html  fn.render_program.html  fn.translate.html  index.html  macro.codes.html  sidebar-items.js  struct.Ast.html  struct.Database.html  struct.Diagnostics.html  struct.Files.html  struct.SourceFile.html  struct.Text.html  struct.Tree.html  trait.Db.html  trait.SerializeWithDatabase.html
mcc/assembling/: fn.assemble_and_link.html
mcc/cmd/: enum.CommandError.html
mcc/codegen/: fn.generate_assembly.html  index.html  sidebar-items.js
mcc/codegen/asm/: enum.BinaryOperator.html  enum.ComparisonOperator.html  enum.Instruction.html  enum.Operand.html  enum.Register.html  enum.UnaryOperator.html  index.html  sidebar-items.js  struct.FunctionDefinition.html  struct.Program.html
mcc/codes/: constant.ALL.html  constant.DEFINITION.html  index.html  sidebar-items.js  struct.ErrorCode.html
mcc/codes/parse/: constant.invalid_type.html  constant.keyword_as_identifier.html  constant.missing_token.html  constant.unexpected_token.html  index.html  sidebar-items.js
mcc/codes/type_check/: constant.invalid_lvalue.html  constant.invalid_type.html  constant.keyword_as_identifier.html  constant.missing_return_type.html  constant.redefinition.html  constant.undeclared_identifier.html  constant.unimplemented.html  index.html  sidebar-items.js
mcc/debug/: trait.SerializeWithDatabase.html
mcc/diagnostics/: index.html  sidebar-items.js  struct.Diagnostics.html  trait.DiagnosticExt.html  type.Diagnostic.html
mcc/diagnostics/codes/: index.html  sidebar-items.js
mcc/files/: struct.Files.html
mcc/hir/: CompilationUnit.t.html  HirNode.t.html  enum.Type.html  index.html  sidebar-items.js  struct.CompilationUnit.html  struct.Function.html  struct.HirId.html  trait.HirNode.html
mcc/lowering/: fn.lower.html  fn.lower_item.html  fn.lower_program.html  fn.lower_stage_diagnostics.html  index.html  sidebar-items.js
mcc/lowering/tacky/: enum.BinaryOperator.html  enum.ComparisonOperator.html  enum.Instruction.html  enum.UnaryOperator.html  enum.Val.html  enum.Variable.html  index.html  sidebar-items.js  struct.FunctionDefinition.html  struct.Program.html
mcc/parsing/: fn.parse.html
mcc/preprocessing/: fn.preprocess.html
mcc/ptr/: index.html  sidebar-items.js  struct.Declaration.html  struct.FunctionDefinition.html  struct.Ptr.html  struct.RawPtr.html
mcc/render/: fn.render_program.html  index.html  sidebar-items.js
mcc/src/: diagnostics.rs  hir.rs  lib.rs  trans.rs
mcc/text/: struct.Text.html
mcc/trans/: fn.translate.html
mcc/typechecking/: fn.typecheck.html  index.html  sidebar-items.js  struct.TyCtx.html
mcc/typechecking/hir/: enum.Def.html  enum.Item.html  enum.Type.html  (+8 more)
mcc/types/: index.html  sidebar-items.js  struct.Ast.html  struct.SourceFile.html  struct.Tree.html
mcc_driver/: Cargo.toml  all.html  enum.Outcome.html  fn.run.html  index.html  sidebar-items.js  struct.Config.html  struct.Driver.html  trait.Callbacks.html
mcc_driver/callbacks/: enum.Outcome.html  fn.run.html  struct.Config.html  trait.Callbacks.html
mcc_driver/src/: lib.rs  timer.rs
syntax/: Cargo.toml  all.html  fn.parse.html  index.html  macro.defer.html  sidebar-items.js  struct.NodeId.html  struct.Token.html
syntax/ast/: AstNode.t.html  enum.BinaryOperator.html  enum.Expression.html  enum.Item.html  enum.LiteralKind.html  enum.Statement.html  enum.Type.html  index.html  sidebar-items.js  struct.Argument.html  struct.BinaryOp.html  struct.File.html  struct.FnDecl.html  struct.Function.html  struct.Ident.html  struct.Literal.html  struct.Return.html  trait.AstNode.html
syntax/node_id/: struct.NodeId.html
syntax/parse/: fn.parse.html  struct.Token.html
syntax/src/: ast.rs  grammar.lalrpop  grammar.rs  lib.rs  node_id.rs  parse.rs  visitor.rs
syntax/visitor/: fn.visit_argument.html  fn.visit_argument_mut.html  fn.visit_expression.html  fn.visit_expression_mut.html  fn.visit_file.html  fn.visit_file_mut.html  fn.visit_fn_decl.html  fn.visit_fn_decl_mut.html  fn.visit_function.html  fn.visit_function_mut.html  fn.visit_ident.html  fn.visit_item.html  fn.visit_item_mut.html  fn.visit_literal.html  fn.visit_return.html  fn.visit_return_mut.html  fn.visit_statement.html  fn.visit_statement_mut.html  fn.visit_type.html  fn.visit_type_mut.html  index.html  sidebar-items.js  trait.MutVisitor.html  trait.Visitor.html  visit_argument.v.html  visit_argument_mut.v.html  visit_expression.v.html  visit_expression_mut.v.html  visit_function.v.html  visit_function_mut.v.html  visit_literal.v.html  visit_return.v.html  visit_return_mut.v.html  visit_statement.v.html  visit_statement_mut.v.html
tests/: Cargo.toml  all.html  enum.Kind.html  fn.discover.html  index.html  struct.Config.html  struct.ExpectedResults.html  struct.TestCase.html  struct.TestResult.html
tests/src/: lib.rs
tests/tests/: integration.rs  smoke.rs  writing_a_c_compiler.rs
(+20534 files in other folders)
