[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Michael-F-Bryan <consulting@michaelfbryan.com>"]
edition = "2024"
homepage = "https://github.com/Michael-F-Bryan/mcc.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Michael-F-Bryan/mcc.git"
rust-version = "1.88.0"
version = "0.0.0"
