[workspace]
members = ["crates/*", "tests"]
resolver = "2"

[workspace.package]
authors = ["Michael-F-Bryan <consulting@michaelfbryan.com>"]
edition = "2024"
homepage = "https://github.com/Michael-F-Bryan/mcc.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Michael-F-Bryan/mcc.git"
rust-version = "1.88.0"
version = "0.0.0"

[workspace.dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive", "env"] }
codespan-reporting = "0.12.0"
salsa = "0.23.0"
thiserror = "2.0.12"
tree-sitter = "0.25.8"
tree-sitter-c = "0.24.1"
