[workspace]
members = ["crates/*", "integration-tests"]
resolver = "2"

[workspace.package]
authors = ["Michael-F-Bryan <consulting@michaelfbryan.com>"]
edition = "2024"
homepage = "https://github.com/Michael-F-Bryan/mcc.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Michael-F-Bryan/mcc.git"
rust-version = "1.88.0"
version = "0.0.0"

[workspace.dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive", "env"] }
codespan-reporting = { version = "0.12.0", features = ["serialization"] }
salsa = "0.23.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.12"
tracing = { version = "0.1.41", features = ["attributes"] }
tree-sitter = "0.25.8"
tree-sitter-c = "0.24.1"
type-sitter = { version = "0.8.0", default-features = false }
