cargo-features = ["edition"]

[package]
edition = '2018'
name = "compile_test"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]

[dependencies]
syntax = { path = "../syntax" }
mcc = { path = "../mcc" }
mcc_driver = { path = "../mcc_driver" }
failure = "0.1.2"
serde = "1.0.72"
serde_json = "1.0.26"
slog = "2.3.2"
codespan = { git = "https://github.com/Michael-F-Bryan/codespan", branch = "more-serde", features = ["memory_usage", "serialization"] }
codespan-reporting = { git = "https://github.com/Michael-F-Bryan/codespan", branch = "more-serde", features = ["memory_usage", "serialization"] }
glob = "0.2.11"
slog-async = "2.3.0"
slog-term = "2.4.0"
structopt = "0.2.10"

[[test]]
name = "compile-test"
path = "tests/main.rs"
harness = false
