[package]
name = "integration-tests"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
libtest-mimic = "0.8"
mcc = { version = "0.0.0", path = "../crates/mcc" }
mcc-driver = { version = "0.0.0", path = "../crates/mcc-driver" }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3.20.0"

[[test]]
name = "integration"
path = "tests/integration.rs"
harness = false
