cargo-features = ["edition"]

[package]
edition = '2018'
name = "mcc"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]

[dependencies]
syntax = { path = "../syntax" }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm6-0" }
heapsize = "0.4.2"
heapsize_derive = "0.1.4"
serde = "1.0.72"
serde_derive = "1.0.72"
codespan = { git = "https://github.com/Michael-F-Bryan/codespan", branch = "more-serde", features = ["memory_usage", "serialization"] }
codespan-reporting = { git = "https://github.com/Michael-F-Bryan/codespan", branch = "more-serde", features = ["memory_usage", "serialization"] }

