cargo-features = ["edition"]

[package]
edition = '2018'
name = "mcc_driver"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]

[dependencies]
mcc = { path = "../mcc" }
syntax = { path = "../syntax" }
codespan = { git = "https://github.com/Michael-F-Bryan/codespan", branch = "heapsize", features = ["memory_usage"] }
codespan-reporting = { git = "https://github.com/Michael-F-Bryan/codespan", branch = "heapsize", features = ["memory_usage"] }
heapsize = "0.4.2"
heapsize_derive = "0.1.4"
slog = "2.3.2"
slog-async = "2.3.0"
slog-term = "2.4.0"
itertools = "0.7.8"
