cargo-features = ["edition"]

[package]
edition = '2018'
name = "syntax"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
build = "build.rs"

[dependencies]
codespan = { git = "https://github.com/Michael-F-Bryan/codespan", branch = "heapsize", features = ["memory_usage"] }
failure = "0.1.2"
lalrpop-util = "0.15.2"
heapsize = "0.4.2"
heapsize_derive = "0.1.4"
sum_type = "0.1.0"
regex = "1.0.2"

[build-dependencies]
lalrpop = "0.15.2"

[dev-dependencies]
pretty_assertions = "0.5.1"
