[package]
name = "tests"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
libtest-mimic = "0.8"
mcc-driver = { version = "0.0.0", path = "../crates/mcc-driver" }
anyhow = { workspace = true }
tempfile = "3.20.0"
mcc = { version = "0.0.0", path = "../crates/mcc" }

[[test]]
name = "integration"
path = "tests/integration.rs"
harness = false
