[package]
name = "mcc-macros"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
proc-macro2 = "1.0.101"
quote = "1.0.40"
syn = "2.0.106"

[lib]
proc-macro = true
