[package]
name = "mcc-syntax"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
tree-sitter = "0.25.8"
type-sitter = { version = "0.7.4", default-features = false }
type-sitter-lib = "0.7.4"

[build-dependencies]
tree-sitter-c = "0.24.1"
type-sitter-gen = "0.7.4"
