[package]
name = "mcc-syntax"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
tree-sitter = { workspace = true }
type-sitter = { version = "0.7.4", default-features = false }

[build-dependencies]
tree-sitter-c = { workspace = true }
type-sitter-gen = "0.7.4"
