[package]
name = "mcc-syntax"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
tree-sitter = { workspace = true }
type-sitter = { workspace = true }

[build-dependencies]
prettyplease = "0.2.36"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.104"
tree-sitter-c = { workspace = true }
type-sitter-gen = "0.8.0"
