[package]
name = "mcc"
description = "The core of the mcc compiler"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
codespan-reporting = { workspace = true }
mcc-syntax = { version = "0.0.0", path = "../mcc-syntax" }
salsa = { workspace = true }
target-lexicon = "0.13.2"
thiserror = { workspace = true }
tracing = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-c = { workspace = true }
type-sitter = { workspace = true }

[dev-dependencies]
insta = "1.43.1"
