[package]
name = "mcc"
description = "The core of the mcc compiler"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
codespan-reporting = { workspace = true }
mcc-macros = { version = "0.0.0", path = "../mcc-macros" }
mcc-syntax = { version = "0.0.0", path = "../mcc-syntax" }
paste = "1.0.15"
salsa = { workspace = true }
serde = { workspace = true }
target-lexicon = "0.13.2"
thiserror = { workspace = true }
tracing = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-c = { workspace = true }
type-sitter = { workspace = true }

[dev-dependencies]
insta = { version = "1.43.1", features = ["json"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34"
tree-sitter-query = { git = "https://github.com/tree-sitter-grammars/tree-sitter-query" }
