[package]
name = "xtask"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true }
prettyplease = "0.2.37"
proc-macro2 = "1.0.101"
quote = "1.0.41"
serde = { workspace = true, features = ["derive"] }
serde_yaml = "0.9.34"
syn = "2.0.106"
